# avers

./: .travis.yml  README.md  circle.yml  shell.nix  stack.yaml
.github/: dependabot.yml
.github/workflows/: validate.yml
pkg/hs/avers/: .gitignore  .travis.yml  README.md  avers.cabal  stack.yaml
pkg/hs/avers-api/: .travis.yml  avers-api.cabal  stack.yaml
pkg/hs/avers-api-docs/: avers-api-docs.cabal  stack.yaml
pkg/hs/avers-api-docs/src/Avers/API/: Documentation.hs
pkg/hs/avers-api/src/Avers/: API.hs
pkg/hs/avers-api/src/Avers/API/: Credentials.hs  Instances.hs  Types.hs
pkg/hs/avers-server/: LICENSE  avers-server.cabal  stack.yaml
pkg/hs/avers-server/src/Avers/: Server.hs
pkg/hs/avers-server/src/Avers/Server/: Authorization.hs  Instances.hs
pkg/hs/avers/benchmark/: Benchmark.hs
pkg/hs/avers/script/: bootstrap  cibuild  test
pkg/hs/avers/src/: Avers.hs
pkg/hs/avers/src/Avers/: Handle.hs  Index.hs  Metrics.hs  Patching.hs  Storage.hs  TH.hs  Types.hs  Views.hs
pkg/hs/avers/src/Avers/Metrics/: Measurements.hs  Measurements.txt  TH.hs
pkg/hs/avers/src/Avers/Storage/: Backend.hs  Expressions.hs
pkg/hs/avers/test/: Test.hs
pkg/js/avers/: .gitignore  .npmignore  AGENTS.md  biome.json  flake.nix  gulpfile.js  package-lock.json  package.json  pnpm-lock.yaml  release.nix  rollup.config.js  tsconfig.json  tslint.json
pkg/js/avers/example/: app.js  index.html
pkg/js/avers/script/: canary  cibuild
pkg/js/avers/src/: core.ts  index.test.ts  index.ts  session.ts  shared.ts  storage.ts
pkg/js/avers/src/avers/: core.ts  session.ts  storage.ts
pkg/js/avers/src/storage/: api.ts  collection.ts  editable.ts  ephemeral.ts  internal.ts  keyed-collection.ts  patch.ts  static.ts  types.ts
pkg/js/avers/src/storage/api/: applyChange.ts  applyServerResponse.ts  captureChanges.ts  changeFeedSubscription.ts  ephemeralValue.ts  lookupPatch.ts  mkEditable.ts  prepareLocalChanges.ts  resetObjectCollection.ts  resolveEditable.ts  resolveEphemeral.ts  resolveStatic.ts  restoreLocalChanges.ts  saveEditable.ts  startNextGeneration.ts  staticValue.ts  updateObjectCollection.ts
pkg/js/avers/src/storage/internal/: applyPatches.ts  attachNetworkRequest.ts  changeEditable.ts  initContent.ts  mkEphemeralE.ts  mkStaticE.ts  modifyHandle.ts  reportNetworkFailure.ts  runNetworkRequest.ts
pkg/js/avers/test/: avers.test.ts
scripts/: cibuild
