name:                avers
version:             0.0.17.1
license:             GPL-3
license-file:        LICENSE
author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com
category:            Avers
build-type:          Simple
cabal-version:       >= 1.10

synopsis:            Server-side implementation of the Avers storage model
description:
  This is the server-side implementation of the Avers storage model. It is a
  Haskell library, intended to be used by your application. The library provides
  you with everything you need to write your own Avers server. You can create and
  patch objects and collections thereof. It has builtin support for sessions,
  authentication and managing blobs. The database is not configurable. Avers is
  currently hardcoded to use RethinkDB.


extra-source-files:
    src/Avers/Metrics/Measurements.txt


source-repository head
    type:     git
    location: https://github.com/wereHamster/avers


library
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:
        -Wall


    -- For the time being everything is exported.
    exposed-modules:
        Avers
      , Avers.Handle
      , Avers.Index
      , Avers.Metrics
      , Avers.Metrics.Measurements
      , Avers.Metrics.TH
      , Avers.Patching
      , Avers.Storage
      , Avers.Storage.Backend
      , Avers.Storage.Expressions
      , Avers.TH
      , Avers.Types
      , Avers.Views


    -- Standard dependencies, stuff that is or should be in the platform.
    build-depends:
        aeson
      , attoparsec
      , base >=4 && <5
      , bytestring
      , clock
      , containers
      , filepath
      , mtl
      , network
      , network-uri
      , safe
      , stm
      , template-haskell
      , text
      , time
      , unordered-containers
      , vector

    -- More exotic dependencies which people may not immediately recognize.
    build-depends:
        MonadRandom
      , cryptonite
      , memory
      , inflections >= 0.3.0.0
      , resource-pool
      , rethinkdb-client-driver
      , scrypt



benchmark benchmark
    hs-source-dirs:      benchmark
    default-language:    Haskell2010

    ghc-options:        -threaded -Wall -O2 -rtsopts

    type:                exitcode-stdio-1.0
    main-is:             Benchmark.hs

    build-depends:
        aeson
      , avers
      , base >=4 && <5
      , mtl
      , criterion
      , resource-pool
      , rethinkdb-client-driver
      , network-uri
      , text


test-suite spec
    hs-source-dirs:      test
    default-language:    Haskell2010

    type:                exitcode-stdio-1.0
    main-is:             Test.hs

    build-depends:
        MonadRandom
      , aeson
      , attoparsec
      , avers
      , base >=4 && <5
      , bytestring
      , containers
      , hspec
      , mtl
      , resource-pool
      , rethinkdb-client-driver
      , scrypt
      , stm
      , text
      , time
      , unordered-containers
      , vector
